[package]
name = "operator-common"
version = "0.1.0"
authors = ["Brian Hechinger <brian@zenith.network>"]
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
k8s-openapi = { version = "0.21.1", features = ["latest"] }
kube = { version = "0.90.0", features = ["runtime", "client", "derive"] }
kube-runtime = "0.90.0"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
