[package]
name = "operator-common"
version = "0.2.0"
authors = ["Brian Hechinger <brian@zenith.network>"]
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
k8s-openapi = { version = "0.27.0", features = ["latest"] }
kube = { version = "3.0.1", features = ["runtime", "client", "derive"] }
kube-runtime = "3.0.1"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
rand = "0.8.5"
kcr_gateway_networking_k8s_io = "3.20260128.213753"
